--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-        <source src="son/introsite.mp3" type="audio/mpeg">
+        <source src="introsite.mp3" type="audio/mpeg">
     </audio>
     <audio id="modalMusic">
-        <source src="son/SMOP Vannesa_ HBD TAMOU.mp3" type="audio/mpeg">
+        <source src="SMOP Vannesa_ HBD TAMOU.mp3" type="audio/mpeg">
     </audio>
 
     <script>
@@ -181,7 +181,7 @@
 
             downloadBtn.addEventListener('click', () => {
                 const link = document.createElement('a');
-                link.href = 'son/SMOP Vannesa_ HBD TAMOU.mp3';
+                link.href = 'SMOP Vannesa_ HBD TAMOU.mp3';
                 link.download = 'Zeine_Birthday_Song.mp3';
                 link.click();
             });
