--- a/index.html
+++ b/index.html
@@ -5,97 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyeux Anniversaire Zeine Tamou!</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background: linear-gradient(45deg, #ff9a9e, #fad0c4);
-            overflow: hidden;
-        }
-        .container {
-            text-align: center;
-            background: rgba(255,255,255,0.9);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            position: relative;
-            overflow: hidden;
-        }
-        #clickMe {
-            background: linear-gradient(45deg, #ff6b6b, #feca57);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s;
-            position: relative;
-            z-index: 10;
-        }
-        #clickMe:hover {
-            transform: scale(1.1) rotate(5deg);
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.5);
-        }
-        .modal-content {
-            background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
-            margin: 10% auto;
-            padding: 30px;
-            border-radius: 15px;
-            width: 80%;
-            max-width: 600px;
-            text-align: center;
-            position: relative;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-        }
-        .confetti {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            transform: rotate(45deg);
-            animation: fall 3s linear infinite;
-        }
-        .firework {
-            position: absolute;
-            width: 5px;
-            height: 5px;
-            background: radial-gradient(circle, rgba(255,255,255,0.8), transparent);
-            border-radius: 50%;
-            animation: explode 1s ease-out infinite;
-        }
-        @keyframes fall {
-            to { 
-                transform: translateY(100vh) rotate(360deg);
-                opacity: 0;
-            }
-        }
-        @keyframes explode {
-            0% { transform: scale(0); opacity: 1; }
-            100% { transform: scale(20); opacity: 0; }
-        }
-        .light {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: radial-gradient(circle, rgba(255,255,255,0.8), transparent);
-            border-radius: 50%;
-            animation: moveLight 2s infinite alternate;
-        }
-        @keyframes moveLight {
-            from { transform: translateX(-50px) translateY(-50px); }
-            to { transform: translateX(50px) translateY(50px); }
-        }
+         body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(45deg, #ff9a9e, #fad0c4);
+      overflow-y: auto; /* Enable vertical scrolling on mobile */
+    }
+    .container {
+      text-align: center;
+      background: rgba(255,255,255,0.9);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      position: relative;
+    }
+    #clickMe {
+      background: linear-gradient(45deg, #ff6b6b, #feca57);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: transform 0.3s;
+      position: relative;
+      z-index: 10;
+    }
+    #clickMe:hover {
+      transform: scale(1.1) rotate(5deg);
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+    }
+    .modal-content {
+      background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
+      margin: 10% auto;
+      padding: 30px;
+      border-radius: 15px;
+      width: 80%;
+      max-width: 600px;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+    .confetti {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      transform: rotate(45deg);
+      animation: fall 3s linear infinite;
+    }
+    .firework {
+      position: absolute;
+      width: 5px;
+      height: 5px;
+      background: radial-gradient(circle, rgba(255,255,255,0.8), transparent);
+      border-radius: 50%;
+      animation: explode 1s ease-out infinite;
+    }
+    @keyframes fall {
+      to {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+    @keyframes explode {
+      0% { transform: scale(0); opacity: 1; }
+      100% { transform: scale(20); opacity: 0; }
+    }
+    .light {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: radial-gradient(circle, rgba(255,255,255,0.8), transparent);
+      border-radius: 50%;
+      animation: moveLight 2s infinite alternate;
+    }
+    @keyframes moveLight {
+      from { transform: translateX(-50px) translateY(-50px); }
+      to { transform: translateX(50px) translateY(50px); }
+    }
     </style>
 </head>
 <body>
